# ymir

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/: example.ymr  main.ymr  ymir_dependencies.toml
scripts/: benchmark.py
tests/: conftest.py
tests/core/: test_lexer.py  test_parser.py
ymir/: interpreter.py  logging.py
ymir/cli/: ymir_cli.py
ymir/core/: ast.py  builtin_functions.py  builtin_networking.py  lexer.py  parser.py  runtime.py  semantic_analyzer.py  symbol_table.py  type_checker.py  types.py
ymir/stdlib/: collections.ymr  datetime.ymr  http.ymr  io.ymr  math.ymr  string.ymr
ymir/tools/: async_support.py  codegen.py  dependency_manager.py
